samples/_failures_safe/1761444031_357318_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c38345e.c: In function ‘main’:
./samples/SAFE/__tmp_8c38345e.c:167:9: error: expected declaration or statement at end of input
  167 |         free_matrix(mat2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_8c38345e.c:167:9: error: expected declaration or statement at end of input
